fix overlap style problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   text-align: center;
+  width: 100%;
 }
 
 .logo {
@@ -90,15 +91,13 @@ nav ul li.active {
 /******** footer ///////////////*******/
 /* Footer CSS */
 .footer {
-  width: 100%; /* Ensure the footer spans the entire width of the screen */
+  position: static;
+  bottom: 0;
+  right: 0px;
+  width: 100%;
   background-color: #2b7775;
   color: #fff;
-  padding: 0px; /* You can adjust the padding as needed */
-
-  bottom: 0px;
-  right: 0px;
-  left: 0px;
-  margin-top: 180px; /* This margin pushes the footer up by 110px */
+  padding-right: 15px;
 }
 
 .footer-content {
@@ -184,6 +183,7 @@ nav ul li.active {
   box-shadow: 5px 5px 20px rgb(56, 56, 56);
   margin: 10px;
   padding: 5px;
+  margin-bottom: 50px;
 }
 
 .pet-card img {
@@ -196,8 +196,8 @@ nav ul li.active {
   width: 100%;
   height: 850px;
   background-image: url(https://images.unsplash.com/photo-1507150823660-eed1895c23c7?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+
   background-size: cover;
-  background-position: center;
 }
 
 .catch-phrase {
@@ -212,3 +212,35 @@ nav ul li.active {
 }
 
 /* petDetailPage  */
+
+/*filter section*/
+.filter-section {
+  margin-top: 20px;
+}
+
+.filter-section h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.filter-section select,
+.filter-section input[type="text"] {
+  margin-right: 10px;
+  padding: 8px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.filter-section select {
+  width: 150px;
+}
+
+.filter-section input[type="text"] {
+  width: 200px;
+}
+
+.filter-section select:focus,
+.filter-section input[type="text"]:focus {
+  outline: none;
+  border-color: #2b7775;
+}
